media text and tried aligning text to the right

--- a/CTWUXClassExercise/Properties/codeTheWay.html
+++ b/CTWUXClassExercise/Properties/codeTheWay.html
@@ -42,7 +42,7 @@
             <ul>
                 <li> <a href="lifeNavigators.html">Life Navigators</a></li>
                 <li><a href="heroesForHealthcare.html">Heroes For Healthcare</a></li>
-                <li><a href="media">Media</a></li>
+                <li><a href="media.html">Media</a></li>
             </ul>            
         </div>
     </div>
@@ -62,9 +62,11 @@
 
     #b{
         float:left;
+        text-align:left;
     }
     #c{
         float: right;
+        text-align:right;
     }
 
 </style>
