--- a/CTWUXClassExercise/Properties/media.html
+++ b/CTWUXClassExercise/Properties/media.html
@@ -5,9 +5,29 @@
     <title></title>
 </head>
 <body>
-    <h1>Media</h1>
+    <div class="container" id="a">
+        <h1>Media</h1>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <a href="codeTheWay.html">Home</a>
+        </div>
+    </div>
 
 
-    <a href="codeTheWay.html">Home</a>
 </body>
 </html>
+<style>
+    #a {
+        text-align: center;
+    }
+
+    #b {
+        float: left;
+    }
+
+    #c {
+        float: right;
+    }
+</style>
