got rid of divs

--- a/CTWUXClassExercise/Properties/heroesForHealthcare.html
+++ b/CTWUXClassExercise/Properties/heroesForHealthcare.html
@@ -5,34 +5,25 @@
     <title></title>
 </head>
 <body>
-    <div class="container" id="a">
-        <h1>Heroes For Healthcare</h1>
-    </div>
 
-    <div class="container">
-        <div class="row">
-            <div class="col-1">
+        <h1 align="center">Heroes For Healthcare</h1>
+
                 <h3>Mision</h3>
                 <p>
                     Our non-profit organization is a resource for our military personnel to start a career in healthcare.
                 </p>
-            </div>
-            <div class="col-6">
-                <h3>Unemployed Veterans</h3>
-                <p>
+                <h3 align ="right">Unemployed Veterans</h3>
+                <p align="right">
                     Many U.S. Veterans find it hard to secure a job in healthcare when they’re ready to work in the civilian world. Even after showing dedication, strong work ethic, and leadership while serving our country, many military members can’t find jobs.
                 </p>
-                <ul>
-                    <li>
+                <ul align="right">
+                    <li align="right">
                         453,000 unemployed veterans in 2016
                     </li>
-                    <li>
+                    <li align="right">
                         Post-Sept. 11 veterans tend to be unemployed at higher rates than other veterans
                     </li>
                 </ul>
-            </div>
-        </div>
-        <div class="row">
             <h3>Message From the President</h3>
             <p>
                 I started Heroes for Healthcare to help our U.S. military personnel receive the resources and credentials they need to continue their career in healthcare as a civilian.
@@ -41,28 +32,5 @@
 
                 After all they did for us, supporting this organization seems like the right thing to do. Make a difference today by supporting Heroes for Healthcare.
             </p>
-        </div>
-        <div class="row">
-            <a href="codeTheWay.html">Home</a>
-        </div>
-    </div>
-
-
-
-
 </body>
 </html>
-
-<style>
-    #a {
-        text-align: center;
-    }
-
-    #b {
-        float: left;
-    }
-
-    #c {
-        float: right;
-    }
-</style>
