--- a/CTWUXClassExercise/Properties/lifeNavigators.html
+++ b/CTWUXClassExercise/Properties/lifeNavigators.html
@@ -5,27 +5,18 @@
     <title></title>
 </head>
 <body>
-    <div class="container" id="a">
-        <h1>Life Navigators</h1>
-    </div>
+        <h1 align="center">Life Navigators</h1>
 
-    <div class="container">
-        <div class="row">
-            <div class="col-1">
                 <h3>Mission</h3>
                 <p>
                     The mission of Life Navigators is to improve the quality of life for individuals with developmental and related disabilities, their families, and the community through information, education, advocacy and life planning services.
                 </p>
-            </div>
-            <div class="col-6">
-                <h3>Vision</h3>
-                <p>
+
+                <h3 align="right">Vision</h3>
+                <p align="right">
                     Life Navigators envisions an inclusive community where individuals with disabilities and their support networks experience full participation and maximized independence. Our community will value the rights, hopes, dreams and contributions of all people with disabilities.
                 </p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-1">
+
                 <h3>History</h3>
                 <p>
                     Life Navigators was founded by parents who were committed to developing programs and educational opportunities for their children with intellectual and developmental disabilities.
@@ -64,25 +55,6 @@
                         Expanded the Trust Program by offering a second trust option, the Trust II Pooled Trust.
                     </li>
                 </ul>
-            </div>
-        </div>
-        <div class="row">
-            <a href="codeTheWay.html">Home</a>
-        </div>
-    </div>
 
 </body>
 </html>
-<style>
-    #a {
-        text-align: center;
-    }
-
-    #b {
-        float: left;
-    }
-
-    #c {
-        float: right;
-    }
-</style>
