--- a/CTWUXClassExercise/Properties/media.html
+++ b/CTWUXClassExercise/Properties/media.html
@@ -5,29 +5,6 @@
     <title></title>
 </head>
 <body>
-    <div class="container" id="a">
-        <h1>Media</h1>
-    </div>
-
-    <div class="container">
-        <div class="row">
-            <a href="codeTheWay.html">Home</a>
-        </div>
-    </div>
-
-
+        <h1 align="center">Media</h1>
 </body>
 </html>
-<style>
-    #a {
-        text-align: center;
-    }
-
-    #b {
-        float: left;
-    }
-
-    #c {
-        float: right;
-    }
-</style>
