Images in - took off height and width and stuff

--- a/CTWUXClassExercise/Properties/codeTheWay.html
+++ b/CTWUXClassExercise/Properties/codeTheWay.html
@@ -7,7 +7,7 @@
 
 <body>
 
-    <h1 align="center">Code the Way</h1>
+    <img src="/Images/CodeTheWay Logo.png" /><h1 align="center">Code the Way</h1>
 
     <h3>Mission</h3>
     <p>Code the Way facilitates the collaboration of schools, companies, and nonprofits to: (1) Offer students advanced computer science training and real-world job experiences working on projects that benefit nonprofits; (2) Increase certified computer science teachers; and (3) Contribute to the technology talent base.</p>
