--- a/CTWUXClassExercise/Properties/lifeNavigators.html
+++ b/CTWUXClassExercise/Properties/lifeNavigators.html
@@ -5,17 +5,21 @@
     <title></title>
 </head>
 <body>
-        <h1 align="center">Life Navigators</h1>
+       <h1 align="center">Life Navigators</h1>
 
                 <h3>Mission</h3>
                 <p>
                     The mission of Life Navigators is to improve the quality of life for individuals with developmental and related disabilities, their families, and the community through information, education, advocacy and life planning services.
                 </p>
+    <img src="/Images/LifeNavigators1.jpg" />
+    <img src="/Images/LifeNavigators2.jpg" />
 
                 <h3 align="right">Vision</h3>
                 <p align="right">
                     Life Navigators envisions an inclusive community where individuals with disabilities and their support networks experience full participation and maximized independence. Our community will value the rights, hopes, dreams and contributions of all people with disabilities.
                 </p>
+    <img src="/Images/LifeNavigators3.jpg" />
+    <img src="/Images/LifeNavigators4.jpg" />
 
                 <h3>History</h3>
                 <p>
