--- a/CTWUXClassExercise/Properties/media.html
+++ b/CTWUXClassExercise/Properties/media.html
@@ -5,6 +5,22 @@
     <title></title>
 </head>
 <body>
-        <h1 align="center">Media</h1>
+    <h1 align="center">Media</h1>
+
+    <img src="/Images/20170614_110236.jpg" />
+    <img src="/Images/Code Review.jpg" />
+    <img src="/Images/Definition of done.jpg" />
+    <img src="/Images/Hallway.jpg" />
+    <img src="/Images/Project Management.jpg" />
+    <img src="/Images/Sprint Planning.jpg" />
+    <img src="/Images/Sprint Review.jpg" />
+    <img src="/Images/Sprint review-code demo.jpg" />
+    <img src="/Images/Stand Up.jpg" />
+    <img src="/Images/Team Learning.jpg" />
+    <img src="/Images/Team Programming.jpg" />
+    <img src="/Images/To do list.jpg" />
+    <img src="/Images/Update.jpg" />
+    <img src="/Images/Work Time.jpg" />
+
 </body>
 </html>
