--- a/CTWUXClassExercise/Properties/codeTheWay.html
+++ b/CTWUXClassExercise/Properties/codeTheWay.html
@@ -7,7 +7,7 @@
 
 <body>
 
-    <img src="/Images/CodeTheWay Logo.png" /><h1 align="center">Code the Way</h1>
+    <img src="/Images/CodeTheWay Logo.png" height="75px" width="100px"/><h1 align="center">Code the Way</h1>
 
     <h3>Mission</h3>
     <p>Code the Way facilitates the collaboration of schools, companies, and nonprofits to: (1) Offer students advanced computer science training and real-world job experiences working on projects that benefit nonprofits; (2) Increase certified computer science teachers; and (3) Contribute to the technology talent base.</p>
@@ -23,9 +23,9 @@
 
     <h3>Links</h3>
     <ul>
-        <li> Life Navigators</li>
-        <li>Heroes For Healthcare</li>
-        <li>Media</li>
+        <li> <a href="lifeNavigators.html">Life Navigators</a></li>
+        <li><a href="heroesForHealthcare.html">Heroes For Healthcare</a></li>
+        <li><a href="media.html">Media</a></li>
     </ul>
 
 </body>
