--- a/CTWUXClassExercise/Properties/media.html
+++ b/CTWUXClassExercise/Properties/media.html
@@ -7,20 +7,20 @@
 <body>
     <h1 align="center">Media</h1>
 
-    <img src="/Images/20170614_110236.jpg" />
-    <img src="/Images/Code Review.jpg" />
-    <img src="/Images/Definition of done.jpg" />
-    <img src="/Images/Hallway.jpg" />
-    <img src="/Images/Project Management.jpg" />
-    <img src="/Images/Sprint Planning.jpg" />
-    <img src="/Images/Sprint Review.jpg" />
-    <img src="/Images/Sprint review-code demo.jpg" />
-    <img src="/Images/Stand Up.jpg" />
-    <img src="/Images/Team Learning.jpg" />
-    <img src="/Images/Team Programming.jpg" />
-    <img src="/Images/To do list.jpg" />
-    <img src="/Images/Update.jpg" />
-    <img src="/Images/Work Time.jpg" />
+    <img src="/Images/20170614_110236.jpg" height="300px" width="400px"/>
+    <img src="/Images/Code Review.jpg" height="300px" width="400px"/>
+    <img src="/Images/Definition of done.jpg" height="200px" width="400px"/>
+    <img src="/Images/Hallway.jpg" height="300px" width="400px"/>
+    <img src="/Images/Project Management.jpg" height="300px" width="400px"/>
+    <img src="/Images/Sprint Planning.jpg" height="300px" width="400px"/>
+    <img src="/Images/Sprint Review.jpg" height="300px" wdith="400px"/>
+    <img src="/Images/Sprint review-code demo.jpg" height="300px" width="400px"/>
+    <img src="/Images/Stand Up.jpg" height="300px" width="400px"/>
+    <img src="/Images/Team Learning.jpg" height="300px" width="400px"/>
+    <img src="/Images/Team Programming.jpg" height="300px" width="400px"/>
+    <img src="/Images/To do list.jpg" height="300px" width="400px"/>
+    <img src="/Images/Update.jpg" height="300px" width="400px"/>
+    <img src="/Images/Work Time.jpg" height="300px" width="400px"/>
 
 </body>
 </html>
