--- a/CTWUXClassExercise/Properties/heroesForHealthcare.html
+++ b/CTWUXClassExercise/Properties/heroesForHealthcare.html
@@ -6,15 +6,15 @@
 </head>
 <body>
 
-        <img src="/Images/Heroes Logo.png" /> <h1 align="center">Heroes For Healthcare</h1>
+        <img src="/Images/Heroes Logo.png" height="100px" width="200px"/> <h1 align="center">Heroes For Healthcare</h1>
 
                 <h3>Mision</h3>
-    <img src="/Images/Heroes2.png" />
+    <img src="/Images/Heroes2.png" height="200px" width="400px"/>
                 <p>
                     Our non-profit organization is a resource for our military personnel to start a career in healthcare.
                 </p>
                 <h3 align ="right">Unemployed Veterans</h3>
-    <img src="/Images/Heroes3.png" />
+    <img src="/Images/Heroes3.png" height="225px" width="400px"/>
                 <p align="right">
                     Many U.S. Veterans find it hard to secure a job in healthcare when they’re ready to work in the civilian world. Even after showing dedication, strong work ethic, and leadership while serving our country, many military members can’t find jobs.
                 </p>
