--- a/CTWUXClassExercise/Properties/media.html
+++ b/CTWUXClassExercise/Properties/media.html
@@ -21,6 +21,6 @@
     <img src="/Images/To do list.jpg" height="300px" width="400px"/>
     <img src="/Images/Update.jpg" height="300px" width="400px"/>
     <img src="/Images/Work Time.jpg" height="300px" width="400px"/>
-
+    <a href="codeTheWay.html">Home</a>
 </body>
 </html>
