--- a/CTWUXClassExercise/Properties/heroesForHealthcare.html
+++ b/CTWUXClassExercise/Properties/heroesForHealthcare.html
@@ -9,11 +9,13 @@
     <img src="/Images/Heroes Logo.png" height="100px" width="200px" /> <h1 align="center">Heroes For Healthcare</h1>
 
     <img src="/Images/Heroes2.png" height="200px" width="400px" align="left" />
+    <br />
     <h3>Mision</h3>
     <p>
         Our non-profit organization is a resource for our military personnel to start a career in healthcare.
     </p>
     <img src="/Images/Heroes3.png" height="225px" width="400px" align="right"/>
+    <br />
     <h3 align="right">Unemployed Veterans</h3>
     
     <p align="right">
@@ -27,6 +29,8 @@
             Post-Sept. 11 veterans tend to be unemployed at higher rates than other veterans
         </li>
     </ul>
+    <br />
+
     <h3>Message From the President</h3>
     <p>
         I started Heroes for Healthcare to help our U.S. military personnel receive the resources and credentials they need to continue their career in healthcare as a civilian.
@@ -35,6 +39,6 @@
 
         After all they did for us, supporting this organization seems like the right thing to do. Make a difference today by supporting Heroes for Healthcare.
     </p>
-    <a href="codeTheWay.html">Home</a>
+    <a href="codeTheWay.html" align="center">Home</a>
 </body>
 </html>
