--- a/CTWUXClassExercise/Properties/media.html
+++ b/CTWUXClassExercise/Properties/media.html
@@ -7,10 +7,10 @@
 <body>
     <h1 align="center">Media</h1>
 
-    <img src="/Images/Team Programming (1).jpg" height="400px" width="300px"/>
+    <img src="/Images/Team Programming.jpg" height="400px" width="300px"/>
     <img src="/Images/Code Review.jpg" height="300px" width="400px"/>
     <img src="/Images/Definition of done.jpg" height="200px" width="400px"/>
-    <img src="/Images/Hallway (1).jpg" height="400px" width="300px"/>
+    <img src="/Images/Hallway.jpg" height="400px" width="300px"/>
     <img src="/Images/Project Management.jpg" height="300px" width="400px"/>
     <img src="/Images/Sprint Planning.jpg" height="300px" width="400px"/>
     <img src="/Images/Sprint Review.jpg" height="300px" wdith="400px"/>
