CSS for Headings (code the way page only)

--- a/CTWUXClassExercise/Properties/codeTheWay.html
+++ b/CTWUXClassExercise/Properties/codeTheWay.html
@@ -7,9 +7,9 @@
 
 <body>
 
-    <img src="/Images/CodeTheWay Logo.png" height="75px" width="100px"/><h1 align="center">Code the Way</h1>
+    <img src="/Images/CodeTheWay Logo.png" height="75px" width="100px"/><h1 align="center" class="heading1">Code the Way</h1>
 
-    <h3>Mission</h3>
+    <h3 class="heading2">Mission</h3>
     <p>Code the Way facilitates the collaboration of schools, companies, and nonprofits to: (1) Offer students advanced computer science training and real-world job experiences working on projects that benefit nonprofits; (2) Increase certified computer science teachers; and (3) Contribute to the technology talent base.</p>
     <p>Code the Way model includes:</p>
     <ul>
@@ -18,13 +18,13 @@
         <li>Increasing certified computer science teachers – Support and training for computer science teacher certification increases the availability and quality of high school computer science programs.</li>
     </ul>
     <img src="/Images/Team Learning.jpg" height="250px" width="400px" align="right"/>
-    <h3 align="right">Vision</h3>
-    <p align="right">High school students in Greater Milwaukee have access to high quality computer science education and real-world job experiences, positioning them for success in technology-related fields</p>
+    <h3 class="heading2">Vision</h3>
+    <p>High school students in Greater Milwaukee have access to high quality computer science education and real-world job experiences, positioning them for success in technology-related fields</p>
 
 
-    <h3>Links</h3>
+    <h3 class="heading2">Links</h3>
     <ul>
-        <li> <a href="lifeNavigators.html">Life Navigators</a></li>
+        <li> <button type="button" href="lifeNavigators.html">Life Navigators</button></li>
         <li><a href="heroesForHealthcare.html">Heroes For Healthcare</a></li>
         <li><a href="media.html">Media</a></li>
     </ul>
@@ -32,3 +32,23 @@
 </body>
 
 </html>
+
+<style>
+
+    .heading1{
+        font-family: Georgia;
+        color: black;
+        font-size:xx-large;
+    }
+
+    .heading2 {
+        font-family: Georgia;
+        color: #557A95;
+        font-size: large;
+    }
+
+
+
+
+
+</style>
