Heading and Alignment fixes to all pages

--- a/CTWUXClassExercise/Properties/codeTheWay.html
+++ b/CTWUXClassExercise/Properties/codeTheWay.html
@@ -24,7 +24,7 @@
 
     <h3 class="heading2">Links</h3>
     <ul>
-        <li> <button type="button" href="lifeNavigators.html">Life Navigators</button></li>
+        <li> <a href="lifeNavigators.html">Life Navigators</a></li>
         <li><a href="heroesForHealthcare.html">Heroes For Healthcare</a></li>
         <li><a href="media.html">Media</a></li>
     </ul>
