--- a/CTWUXClassExercise/Properties/lifeNavigators.html
+++ b/CTWUXClassExercise/Properties/lifeNavigators.html
@@ -5,9 +5,9 @@
     <title></title>
 </head>
 <body>
-    <h1 align="center">Life Navigators</h1>
+    <h1 align="center" class="heading1">Life Navigators</h1>
 
-    <h3>Mission</h3>
+    <h3 class="heading2">Mission</h3>
     <p>
         The mission of Life Navigators is to improve the quality of life for individuals with developmental and related disabilities, their families, and the community through information, education, advocacy and life planning services.
     </p>
@@ -15,12 +15,12 @@
     <img src="/Images/LifeNavigators2.jpg" height="200px" width="400px" />
     <br />
    
-    <h3 align="right">Vision</h3>
-    <p align="right">
+    <h3 class="heading2">Vision</h3>
+    <p>
         Life Navigators envisions an inclusive community where individuals with disabilities and their support networks experience full participation and maximized independence. Our community will value the rights, hopes, dreams and contributions of all people with disabilities.
     </p>
     
-    <h3>History</h3>
+    <h3 class="heading2">History</h3>
     <p>
         Life Navigators was founded by parents who were committed to developing programs and educational opportunities for their children with intellectual and developmental disabilities.
     </p>
@@ -61,3 +61,18 @@
     <a href="codeTheWay.html" align="center">Home</a>
 </body>
 </html>
+
+<style>
+
+    .heading1 {
+        font-family: Georgia;
+        color: black;
+        font-size: xx-large;
+    }
+
+    .heading2 {
+        font-family: Georgia;
+        color: #557A95;
+        font-size: large;
+    }
+</style>
