--- a/CTWUXClassExercise/Properties/media.html
+++ b/CTWUXClassExercise/Properties/media.html
@@ -5,7 +5,7 @@
     <title></title>
 </head>
 <body>
-    <h1 align="center">Media</h1>
+    <h1 align="center" class="heading1">Media</h1>
 
     <img src="/Images/Team Programming.jpg" height="400px" width="300px"/>
     <img src="/Images/Code Review.jpg" height="300px" width="400px"/>
@@ -23,3 +23,17 @@
     <a href="codeTheWay.html" align="center">Home</a>
 </body>
 </html>
+<style>
+
+    .heading1 {
+        font-family: Georgia;
+        color: black;
+        font-size: xx-large;
+    }
+
+    .heading2 {
+        font-family: Georgia;
+        color: #557A95;
+        font-size: large;
+    }
+</style>
