--- a/CTWUXClassExercise/Properties/heroesForHealthcare.html
+++ b/CTWUXClassExercise/Properties/heroesForHealthcare.html
@@ -6,32 +6,32 @@
 </head>
 <body>
 
-    <img src="/Images/Heroes Logo.png" height="100px" width="200px" /> <h1 align="center">Heroes For Healthcare</h1>
+    <img src="/Images/Heroes Logo.png" height="100px" width="200px" /> <h1 align="center" class="heading1">Heroes For Healthcare</h1>
 
     <img src="/Images/Heroes2.png" height="200px" width="400px" align="left" />
     <br />
-    <h3>Mision</h3>
+    <h3 class="heading2">Mision</h3>
     <p>
         Our non-profit organization is a resource for our military personnel to start a career in healthcare.
     </p>
     <img src="/Images/Heroes3.png" height="225px" width="400px" align="right"/>
     <br />
-    <h3 align="right">Unemployed Veterans</h3>
+    <h3 class="heading2">Unemployed Veterans</h3>
     
-    <p align="right">
+    <p>
         Many U.S. Veterans find it hard to secure a job in healthcare when they’re ready to work in the civilian world. Even after showing dedication, strong work ethic, and leadership while serving our country, many military members can’t find jobs.
     </p>
-    <ul align="right">
-        <li align="right">
+    <ul>
+        <li>
             453,000 unemployed veterans in 2016
         </li>
-        <li align="right">
+        <li>
             Post-Sept. 11 veterans tend to be unemployed at higher rates than other veterans
         </li>
     </ul>
     <br />
 
-    <h3>Message From the President</h3>
+    <h3 class="heading2">Message From the President</h3>
     <p>
         I started Heroes for Healthcare to help our U.S. military personnel receive the resources and credentials they need to continue their career in healthcare as a civilian.
 
@@ -42,3 +42,18 @@
     <a href="codeTheWay.html" align="center">Home</a>
 </body>
 </html>
+
+<style>
+
+    .heading1 {
+        font-family: Georgia;
+        color: black;
+        font-size: xx-large;
+    }
+
+    .heading2 {
+        font-family: Georgia;
+        color: #557A95;
+        font-size: large;
+    }
+</style>
