Body text styling added to all pages

--- a/CTWUXClassExercise/Properties/heroesForHealthcare.html
+++ b/CTWUXClassExercise/Properties/heroesForHealthcare.html
@@ -11,28 +11,28 @@
     <img src="/Images/Heroes2.png" height="200px" width="400px" align="left" />
     <br />
     <h3 class="heading2">Mision</h3>
-    <p>
+    <p class="body">
         Our non-profit organization is a resource for our military personnel to start a career in healthcare.
     </p>
     <img src="/Images/Heroes3.png" height="225px" width="400px" align="right"/>
     <br />
     <h3 class="heading2">Unemployed Veterans</h3>
     
-    <p>
+    <p class="body">
         Many U.S. Veterans find it hard to secure a job in healthcare when they’re ready to work in the civilian world. Even after showing dedication, strong work ethic, and leadership while serving our country, many military members can’t find jobs.
     </p>
     <ul>
-        <li>
+        <li class="body">
             453,000 unemployed veterans in 2016
         </li>
-        <li>
+        <li class="body">
             Post-Sept. 11 veterans tend to be unemployed at higher rates than other veterans
         </li>
     </ul>
     <br />
 
     <h3 class="heading2">Message From the President</h3>
-    <p>
+    <p class="body">
         I started Heroes for Healthcare to help our U.S. military personnel receive the resources and credentials they need to continue their career in healthcare as a civilian.
 
         We need supporters like you to help our mission so our service members can get a job and better their lives.
@@ -54,6 +54,12 @@
     .heading2 {
         font-family: Georgia;
         color: #557A95;
-        font-size: large;
+        font-size: x-large;
+    }
+
+    .body {
+        font-family: Georgia;
+        color: black;
+        font-size: medium;
     }
 </style>
