--- a/CTWUXClassExercise/Properties/media.html
+++ b/CTWUXClassExercise/Properties/media.html
@@ -34,6 +34,12 @@
     .heading2 {
         font-family: Georgia;
         color: #557A95;
-        font-size: large;
+        font-size: x-large;
+    }
+
+    .body {
+        font-family: Georgia;
+        color: black;
+        font-size: medium;
     }
 </style>
