Links turned into buttons (code the way page only)

--- a/CTWUXClassExercise/Properties/codeTheWay.html
+++ b/CTWUXClassExercise/Properties/codeTheWay.html
@@ -23,11 +23,9 @@
 
 
     <h3 class="heading2">Links</h3>
-    <ul>
-        <li> <a href="lifeNavigators.html">Life Navigators</a></li>
-        <li><a href="heroesForHealthcare.html">Heroes For Healthcare</a></li>
-        <li><a href="media.html">Media</a></li>
-    </ul>
+    <a href="lifeNavigators.html" class="button">Life Navigators</a>
+    <a href="heroesForHealthcare.html" class="button">Heroes For Healthcare</a>
+    <a href="media.html" class="button">Media</a>
 
 </body>
 
@@ -53,6 +51,19 @@
         font-size: medium;
     }
 
+    .button {
+        background-color: #557A95;
+        border: none;
+        color: white;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: medium;
+        font-family: Georgia;
+        margin: 4px 2px;
+        cursor: pointer;
+    }
 
 
 </style>
