All Links turned into buttons

--- a/CTWUXClassExercise/Properties/heroesForHealthcare.html
+++ b/CTWUXClassExercise/Properties/heroesForHealthcare.html
@@ -39,7 +39,7 @@
 
         After all they did for us, supporting this organization seems like the right thing to do. Make a difference today by supporting Heroes for Healthcare.
     </p>
-    <a href="codeTheWay.html" align="center">Home</a>
+    <a href="codeTheWay.html" class="button">Home</a>
 </body>
 </html>
 
@@ -61,5 +61,19 @@
         font-family: Georgia;
         color: black;
         font-size: medium;
+    }
+
+    .button {
+        background-color: #557A95;
+        border: none;
+        color: white;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: medium;
+        font-family: Georgia;
+        margin: 4px 2px;
+        cursor: pointer;
     }
 </style>
