--- a/CTWUXClassExercise/Properties/lifeNavigators.html
+++ b/CTWUXClassExercise/Properties/lifeNavigators.html
@@ -58,7 +58,7 @@
             Expanded the Trust Program by offering a second trust option, the Trust II Pooled Trust.
         </li>
     </ul>
-    <a href="codeTheWay.html" align="center">Home</a>
+    <a href="codeTheWay.html" class="button">Home</a>
 </body>
 </html>
 
@@ -80,5 +80,19 @@
         font-family: Georgia;
         color: black;
         font-size: medium;
+    }
+
+    .button {
+        background-color: #557A95;
+        border: none;
+        color: white;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: medium;
+        font-family: Georgia;
+        margin: 4px 2px;
+        cursor: pointer;
     }
 </style>
