--- a/CTWUXClassExercise/Properties/media.html
+++ b/CTWUXClassExercise/Properties/media.html
@@ -20,7 +20,8 @@
     <img src="/Images/To do list.jpg" height="300px" width="400px"/>
     <img src="/Images/Update.jpg" height="300px" width="400px"/>
     <img src="/Images/Work Time.jpg" height="300px" width="400px"/>
-    <a href="codeTheWay.html" align="center">Home</a>
+    <br />
+    <a href="codeTheWay.html" class="button">Home</a>
 </body>
 </html>
 <style>
@@ -42,4 +43,23 @@
         color: black;
         font-size: medium;
     }
+
+    .button {
+        background-color: #557A95;
+        border: none;
+        color: white;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: medium;
+        font-family: Georgia;
+        margin: 4px 2px;
+        cursor: pointer;
+    }
+
+        .button:hover {
+            background-color: white;
+            border: #557A95;
+        }
 </style>
