--- a/CTWUXClassExercise/Properties/codeTheWay.html
+++ b/CTWUXClassExercise/Properties/codeTheWay.html
@@ -66,5 +66,10 @@
         transition-duration: 0.4s;
     }
 
+        .button:hover {
+            background-color: white;
+            color: #557A95;
+            border: 2px solid #557A95;
+        }
 
 </style>
