--- a/CTWUXClassExercise/Properties/media.html
+++ b/CTWUXClassExercise/Properties/media.html
@@ -56,10 +56,12 @@
         font-family: Georgia;
         margin: 4px 2px;
         cursor: pointer;
+        transition-duration: 0.4s;
     }
 
         .button:hover {
             background-color: white;
-            border: #557A95;
+            color: #557A95;
+            border: 2px solid #557A95;
         }
 </style>
