Changed all px to percentages (in images)

--- a/CTWUXClassExercise/Properties/lifeNavigators.html
+++ b/CTWUXClassExercise/Properties/lifeNavigators.html
@@ -11,8 +11,8 @@
     <p class="body">
         The mission of Life Navigators is to improve the quality of life for individuals with developmental and related disabilities, their families, and the community through information, education, advocacy and life planning services.
     </p>
-    <img src="/Images/LifeNavigators1.jpg" height="200px" width="400px"  />
-    <img src="/Images/LifeNavigators2.jpg" height="200px" width="400px" />
+    <img src="/Images/LifeNavigators1.jpg" height="35%" width="50%"  />
+    <img src="/Images/LifeNavigators2.jpg" height="35%" width="50%" />
     <br />
    
     <h3 class="heading2">Vision</h3>
