--- a/CTWUXClassExercise/Properties/heroesForHealthcare.html
+++ b/CTWUXClassExercise/Properties/heroesForHealthcare.html
@@ -6,15 +6,15 @@
 </head>
 <body>
 
-    <img src="/Images/Heroes Logo.png" height="100px" width="200px" /> <h1 align="center" class="heading1">Heroes For Healthcare</h1>
+    <img src="/Images/Heroes Logo.png" height="5%" width="10%" /> <h1 align="center" class="heading1">Heroes For Healthcare</h1>
 
-    <img src="/Images/Heroes2.png" height="200px" width="400px" align="left" />
+    <img src="/Images/Heroes2.png" height="20%" width="35%" align="left" />
     <br />
     <h3 class="heading2">Mision</h3>
     <p class="body">
         Our non-profit organization is a resource for our military personnel to start a career in healthcare.
     </p>
-    <img src="/Images/Heroes3.png" height="225px" width="400px" align="right"/>
+    <img src="/Images/Heroes3.png" height="20%" width="35%" align="right"/>
     <br />
     <h3 class="heading2">Unemployed Veterans</h3>
     
