--- a/CTWUXClassExercise/Properties/codeTheWay.html
+++ b/CTWUXClassExercise/Properties/codeTheWay.html
@@ -2,12 +2,13 @@
 <html>
 <head>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="css.css">
     <title>Code the Way</title>
 </head>
 
 <body>
 
-    <img src="/Images/CodeTheWay Logo.png" height="5%" width="10%"/><h1 align="center" class="heading1">Code the Way</h1>
+    <img src="/Images/CodeTheWay Logo.png" height="5%" width="10%" /><h1 align="center" class="heading1">Code the Way</h1>
 
     <h3 class="heading2">Mission</h3>
     <p class="body">Code the Way facilitates the collaboration of schools, companies, and nonprofits to: (1) Offer students advanced computer science training and real-world job experiences working on projects that benefit nonprofits; (2) Increase certified computer science teachers; and (3) Contribute to the technology talent base.</p>
@@ -17,7 +18,7 @@
         <li class="body">Companies are part of the solution – Companies invest in education, make technology more accessible to nonprofits, offer their employees a meaningful volunteer experience, and contribute to the talent pipeline.</li>
         <li class="body">Increasing certified computer science teachers – Support and training for computer science teacher certification increases the availability and quality of high school computer science programs.</li>
     </ul>
-    <img src="/Images/Team Learning.jpg" height="20%" width="35%" align="right"/>
+    <img src="/Images/Team Learning.jpg" height="20%" width="35%" align="right" />
     <h3 class="heading2">Vision</h3>
     <p class="body">High school students in Greater Milwaukee have access to high quality computer science education and real-world job experiences, positioning them for success in technology-related fields</p>
 
@@ -31,45 +32,3 @@
 
 </html>
 
-<style>
-
-    .heading1{
-        font-family: Georgia;
-        color: black;
-        font-size:xx-large;
-    }
-
-    .heading2 {
-        font-family: Georgia;
-        color: #557A95;
-        font-size: x-large;
-    }
-
-    .body{
-        font-family: Georgia;
-        color: black;
-        font-size: medium;
-    }
-
-    .button {
-        background-color: #557A95;
-        border: none;
-        color: white;
-        padding: 15px 32px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: medium;
-        font-family: Georgia;
-        margin: 4px 2px;
-        cursor: pointer;
-        transition-duration: 0.4s;
-    }
-
-        .button:hover {
-            background-color: white;
-            color: #557A95;
-            border: 2px solid #557A95;
-        }
-
-</style>
