--- a/CTWUXClassExercise/Properties/heroesForHealthcare.html
+++ b/CTWUXClassExercise/Properties/heroesForHealthcare.html
@@ -1,8 +1,9 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="css.css" />
     <meta charset="utf-8" />
-    <title></title>
+    <title>Heroes For Healthcare</title>
 </head>
 <body>
 
@@ -16,6 +17,11 @@
     </p>
     <img src="/Images/Heroes3.png" height="20%" width="35%" align="right"/>
     <br />
+    <br />
+    <br />
+    <br />
+    <br />
+
     <h3 class="heading2">Unemployed Veterans</h3>
     
     <p class="body">
@@ -42,45 +48,3 @@
     <a href="codeTheWay.html" class="button">Home</a>
 </body>
 </html>
-
-<style>
-
-    .heading1 {
-        font-family: Georgia;
-        color: black;
-        font-size: xx-large;
-    }
-
-    .heading2 {
-        font-family: Georgia;
-        color: #557A95;
-        font-size: x-large;
-    }
-
-    .body {
-        font-family: Georgia;
-        color: black;
-        font-size: medium;
-    }
-
-    .button {
-        background-color: #557A95;
-        border: none;
-        color: white;
-        padding: 15px 32px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: medium;
-        font-family: Georgia;
-        margin: 4px 2px;
-        cursor: pointer;
-        transition-duration: 0.4s;
-    }
-
-        .button:hover {
-            background-color: white;
-            color: #557A95;
-            border: 2px solid #557A95;
-        }
-</style>
