--- a/CTWUXClassExercise/Properties/lifeNavigators.html
+++ b/CTWUXClassExercise/Properties/lifeNavigators.html
@@ -1,8 +1,9 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="css.css" />
     <meta charset="utf-8" />
-    <title></title>
+    <title>Life Navigators</title>
 </head>
 <body>
     <h1 align="center" class="heading1">Life Navigators</h1>
@@ -11,8 +12,8 @@
     <p class="body">
         The mission of Life Navigators is to improve the quality of life for individuals with developmental and related disabilities, their families, and the community through information, education, advocacy and life planning services.
     </p>
-    <img src="/Images/LifeNavigators1.jpg" height="35%" width="50%"  />
-    <img src="/Images/LifeNavigators2.jpg" height="35%" width="50%" />
+    <img src="/Images/LifeNavigators1.jpg" height="30%" width="45%"  />
+    <img src="/Images/LifeNavigators2.jpg" height="30%" width="45%" />
     <br />
    
     <h3 class="heading2">Vision</h3>
@@ -62,44 +63,3 @@
 </body>
 </html>
 
-<style>
-
-    .heading1 {
-        font-family: Georgia;
-        color: black;
-        font-size: xx-large;
-    }
-
-    .heading2 {
-        font-family: Georgia;
-        color: #557A95;
-        font-size: x-large;
-    }
-
-    .body {
-        font-family: Georgia;
-        color: black;
-        font-size: medium;
-    }
-
-    .button {
-        background-color: #557A95;
-        border: none;
-        color: white;
-        padding: 15px 32px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: medium;
-        font-family: Georgia;
-        margin: 4px 2px;
-        cursor: pointer;
-        transition-duration: 0.4s;
-    }
-
-        .button:hover {
-            background-color: white;
-            color: #557A95;
-            border: 2px solid #557A95;
-        }
-</style>
