--- a/CTWUXClassExercise/Properties/media.html
+++ b/CTWUXClassExercise/Properties/media.html
@@ -1,16 +1,17 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="css.css" />
     <meta charset="utf-8" />
-    <title></title>
+    <title>Media</title>
 </head>
 <body>
     <h1 align="center" class="heading1">Media</h1>
 
-    <img src="/Images/Team Programming.jpg" height="20%" width="30%"/>
+    <img src="/Images/Team Programming.jpg" height="15%" width="25%"/>
     <img src="/Images/Code Review.jpg" height="20%" width="35%/>
     <img src="/Images/Definition of done.jpg" height="20%" width="35%"/>
-    <img src="/Images/Hallway.jpg" height="20%" width="30%" />
+    <img src="/Images/Hallway.jpg" height="15%" width="25%" />
     <img src="/Images/Project Management.jpg" height="20%" width="35%"/>
     <img src="/Images/Sprint Planning.jpg" height="20%" width="35%"/>
     <img src="/Images/Sprint Review.jpg" height="20%" width="35%"/>
@@ -21,46 +22,6 @@
     <img src="/Images/Update.jpg" height="20%" width="35%"/>
     <img src="/Images/Work Time.jpg" height="20%" width="35%"/>
   
+    <a href="codeTheWay.html" class="button">Home</a>
 </body>
 </html>
-<style>
-
-    .heading1 {
-        font-family: Georgia;
-        color: black;
-        font-size: xx-large;
-    }
-
-    .heading2 {
-        font-family: Georgia;
-        color: #557A95;
-        font-size: x-large;
-    }
-
-    .body {
-        font-family: Georgia;
-        color: black;
-        font-size: medium;
-    }
-
-    .button {
-        background-color: #557A95;
-        border: none;
-        color: white;
-        padding: 15px 32px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: medium;
-        font-family: Georgia;
-        margin: 4px 2px;
-        cursor: pointer;
-        transition-duration: 0.4s;
-    }
-
-        .button:hover {
-            background-color: white;
-            color: #557A95;
-            border: 2px solid #557A95;
-        }
-</style>
