Changed css name, fixed buttons

--- a/CTWUXClassExercise/Properties/codeTheWay.html
+++ b/CTWUXClassExercise/Properties/codeTheWay.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="css.css">
+    <link rel="stylesheet" href="codeTheWaycss.css">
     <title>Code the Way</title>
 </head>
 
