--- a/CTWUXClassExercise/Properties/lifeNavigators.html
+++ b/CTWUXClassExercise/Properties/lifeNavigators.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="css.css" />
+    <link rel="stylesheet" href="codeTheWaycss.css" />
     <meta charset="utf-8" />
     <title>Life Navigators</title>
 </head>
