--- a/CTWUXClassExercise/Properties/heroesForHealthcare.html
+++ b/CTWUXClassExercise/Properties/heroesForHealthcare.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="css.css" />
+    <link rel="stylesheet" href="codeTheWaycss.css" />
     <meta charset="utf-8" />
     <title>Heroes For Healthcare</title>
 </head>
@@ -15,15 +15,17 @@
     <p class="body">
         Our non-profit organization is a resource for our military personnel to start a career in healthcare.
     </p>
-    <img src="/Images/Heroes3.png" height="20%" width="35%" align="right"/>
     <br />
     <br />
     <br />
     <br />
     <br />
+    <br />
+    <img src="/Images/Heroes3.png" height="20%" width="35%" align="right" />
+
 
     <h3 class="heading2">Unemployed Veterans</h3>
-    
+
     <p class="body">
         Many U.S. Veterans find it hard to secure a job in healthcare when they’re ready to work in the civilian world. Even after showing dedication, strong work ethic, and leadership while serving our country, many military members can’t find jobs.
     </p>
