--- a/CTWUXClassExercise/Properties/media.html
+++ b/CTWUXClassExercise/Properties/media.html
@@ -8,19 +8,19 @@
 <body>
     <h1 align="center" class="heading1">Media</h1>
 
-    <img src="/Images/Team Programming.jpg" height="15%" width="25%"/>
-    <img src="/Images/Code Review.jpg" height="20%" width="35%/>
-    <img src="/Images/Definition of done.jpg" height="20%" width="35%"/>
-    <img src="/Images/Hallway.jpg" height="15%" width="25%" />
-    <img src="/Images/Project Management.jpg" height="20%" width="35%"/>
-    <img src="/Images/Sprint Planning.jpg" height="20%" width="35%"/>
-    <img src="/Images/Sprint Review.jpg" height="20%" width="35%"/>
-    <img src="/Images/Sprint review-code demo.jpg" height="20%" width="35%"/>
-    <img src="/Images/Stand Up.jpg" height="20%" width="35%"/>
-    <img src="/Images/Team Learning.jpg" height="20%" width="35%"/>
-    <img src="/Images/To do list.jpg" height="20%" width="35%"/>
-    <img src="/Images/Update.jpg" height="20%" width="35%"/>
-    <img src="/Images/Work Time.jpg" height="20%" width="35%"/>
+    <img src="/Images/Team Programming.jpg" width="30%"/>
+    <img src="/Images/Code Review.jpg"  width="30%/>
+    <img src="/Images/Definition of done.jpg"  width="30%"/>
+    <img src="/Images/Hallway.jpg"  width="30%" />
+    <img src="/Images/Project Management.jpg"  width="30%"/>
+    <img src="/Images/Sprint Planning.jpg" width="30%"/>
+    <img src="/Images/Sprint Review.jpg" width="30%"/>
+    <img src="/Images/Sprint review-code demo.jpg" width="30%"/>
+    <img src="/Images/Stand Up.jpg" width="30%"/>
+    <img src="/Images/Team Learning.jpg"  width="30%"/>
+    <img src="/Images/To do list.jpg"  width="30%"/>
+    <img src="/Images/Update.jpg"  width="30%"/>
+    <img src="/Images/Work Time.jpg"  width="30%"/>
   
     <a href="codeTheWay.html" class="button">Home</a>
 </body>
