--- a/CTWUXClassExercise/Properties/codeTheWay.html
+++ b/CTWUXClassExercise/Properties/codeTheWay.html
@@ -20,8 +20,10 @@
     </ul>
     <img src="/Images/Team Learning.jpg" height="20%" width="35%" align="right" />
     <h3 class="heading2">Vision</h3>
-    <p class="body">High school students in Greater Milwaukee have access to high quality computer science education and real-world job experiences, positioning them for success in technology-related fields</p>
-
+    <p class="body">High school students in Greater Milwaukee have access to high quality computer science education and real-world job experiences, positioning them for success in technology-related fields.</p>
+    
+    <button onclick="myFunction()" class="button">How It Began</button>
+    <div id="summer">In the summer of 2017, Code The Way began it's first internship opportunity at the company SafeNet Consulting. There, students built a customized full-stack solution for the non-profit organization Life Navigators.</div>
 
     <h3 class="heading2">Links</h3>
     <a href="lifeNavigators.html" class="button">Life Navigators</a>
@@ -31,4 +33,15 @@
 </body>
 
 </html>
+<script>
+    function myFunction() {
+        var x = document.getElementById("summer");
+        if (x.style.display === "none") {
+            x.style.display = "block";
+        }
+        else {
+            x.style.display = "none";
+        }
+    }
+</script>
 
