--- a/CTWUXClassExercise/Properties/lifeNavigators.html
+++ b/CTWUXClassExercise/Properties/lifeNavigators.html
@@ -5,6 +5,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=divice-width, initial-scale=1" />
     <title>Life Navigators</title>
 </head>
 <body>
@@ -22,10 +23,11 @@
     <p class="body">
         Life Navigators envisions an inclusive community where individuals with disabilities and their support networks experience full participation and maximized independence. Our community will value the rights, hopes, dreams and contributions of all people with disabilities.
     </p>
-
-    <ul class="list-inline">
-        <li><a class="body" href="#" data-toggle="tooltip" data-placement="bottom" title="Life Navigators is always looking for volunteers!">Volonteering</a></li>
-    </ul>
+    <div class="container">
+        <ul class="list-inline">
+            <li><a class="body" href="#" data-toggle="tooltip" data-placement="bottom" title="Life Navigators is always looking for volunteers!">Volunteering</a></li>
+        </ul>
+    </div>
     
     <h3 class="heading2">History</h3>
     <p class="body">
