Trying to edit Code the Way Javascript

--- a/CTWUXClassExercise/Properties/codeTheWay.html
+++ b/CTWUXClassExercise/Properties/codeTheWay.html
@@ -36,11 +36,11 @@
 <script>
     function myFunction() {
         var x = document.getElementById("summer");
-        if (x.style.display === "none") {
-            x.style.display = "block";
+        if (x.style.display !== "none") {
+            x.style.display = "none";
         }
         else {
-            x.style.display = "none";
+            x.style.display = "block";
         }
     }
 </script>
