--- a/CTWUXClassExercise/Properties/codeTheWay.html
+++ b/CTWUXClassExercise/Properties/codeTheWay.html
@@ -25,9 +25,12 @@
     </div>
  
     <img src="/Images/Team Learning.jpg" height="20%" width="35%" align="right" />
-    <h3 class="heading2">Vision</h3>
-    <p class="body">High school students in Greater Milwaukee have access to high quality computer science education and real-world job experiences, positioning them for success in technology-related fields.</p>
 
+    <button onclick="showHide()" class="button">Show Vision</button>
+    <div class="container" id="vision">
+        <h3 class="heading2">Vision</h3>
+        <p class="body">High school students in Greater Milwaukee have access to high quality computer science education and real-world job experiences, positioning them for success in technology-related fields.</p>
+    </div>
     <h3 class="heading2">Links</h3>
     <a href="lifeNavigators.html" class="button">Life Navigators</a>
     <a href="heroesForHealthcare.html" class="button">Heroes For Healthcare</a>
@@ -38,7 +41,7 @@
 </html>
 <script>
     function showHide() {
-        var x = document.getElementById("summer");
+        var x = document.getElementById("vision");
         if (x.style.display !== "none") {
             x.style.display = "none";
         }
@@ -48,7 +51,7 @@
     }
 
     function hide() {
-        var y = document.getElementById("summer");
+        var y = document.getElementById("vision");
         y.style.display = "none";
     }
 
