--- a/CTWUXClassExercise/Properties/codeTheWay.html
+++ b/CTWUXClassExercise/Properties/codeTheWay.html
@@ -2,16 +2,39 @@
 <html>
 <head>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="codeTheWaycss.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <meta name="viewport" content="width=divice-width, initial-scale=1" />
     <title>Code the Way</title>
 </head>
 
 <body onload="hide()">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-3">
+                <a href="codeTheWay.html" class="button">Code The Way</a>
+            </div>
+            <div class="col-xs-3">
+                <a href="lifeNavigators.html" class="button">Life Navigators</a>
+            </div>
+            <div class="col-xs-3">
+                <a href="heroesForHealthcare.html" class="button">Heroes For Healthcare</a>
+            </div>
+            <div class="col-xs-3">
+                <a href="media.html" class="button">Media</a>
+            </div>
+        </div>
+    <br />
+        <div class="row">
+                <img src="/Images/CodeTheWay Logo.png" height="5%" width="10%" />
+                <h1 align="center" class="heading1">Code the Way</h1>
+            </div>
+    </div>
+        
 
-    <img src="/Images/CodeTheWay Logo.png" height="5%" width="10%" /><h1 align="center" class="heading1">Code the Way</h1>
 
     <h3 class="heading2">Mission</h3>
     <p class="body">Code the Way facilitates the collaboration of schools, companies, and nonprofits to: (1) Offer students advanced computer science training and real-world job experiences working on projects that benefit nonprofits; (2) Increase certified computer science teachers; and (3) Contribute to the technology talent base.</p>
@@ -23,7 +46,7 @@
             <li><a class="body" href="#" data-toggle="tooltip" data-placement="bottom" title="Support and training for computer science teacher certification increases the availability and quality of high school computer science programs.">Increasing certified computer science teachers</a></li>
         </ul>
     </div>
- 
+
     <img src="/Images/Team Learning.jpg" height="20%" width="35%" align="right" />
 
     <button onclick="showHide()" class="button">Show Vision</button>
@@ -32,9 +55,7 @@
         <p class="body">High school students in Greater Milwaukee have access to high quality computer science education and real-world job experiences, positioning them for success in technology-related fields.</p>
     </div>
     <h3 class="heading2">Links</h3>
-    <a href="lifeNavigators.html" class="button">Life Navigators</a>
-    <a href="heroesForHealthcare.html" class="button">Heroes For Healthcare</a>
-    <a href="media.html" class="button">Media</a>
+    
 
 </body>
 
