Space Between Tall Pics

--- a/CTWUXClassExercise/Properties/media.html
+++ b/CTWUXClassExercise/Properties/media.html
@@ -98,8 +98,25 @@
     <div class="row">
         <div class="col-sm-1">
         </div>
-        <img src="/Images/Team Programming.jpg" height="15%" width="20%" />
         <img src="/Images/Update.jpg" height="20%" width="30%" />
+        <img src="/Images/Work Time.jpg" height="20%" width="30%" />
+    </div>
+    <div class="row">
+        <div class="col-sm-1">
+        </div>
+        <div class="col-sm-4">
+            <p class="body">Update</p>
+        </div>
+        <div class="col-sm-2">
+            <p class="body">Work Time</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-1">
+        </div>
+        <img src="/Images/Team Programming.jpg" height="15%" width="20%" />
+        <div class="col-sm-4">
+        </div>
         <img src="/Images/Hallway.jpg" height="15%" width="20%" />
     </div>
     <div class="row">
@@ -108,26 +125,16 @@
         <div class="col-sm-4">
             <p class="body">Team Programming</p>
         </div>
-        <div class="col-sm-2">
-            <p class="body">Update</p>
+        <div class="col-sm-3">
         </div>
         <div class="col-sm-3">
-            <p class="body">Waiting in the Hallway</p>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-1">
-        </div>
-            <img src="/Images/Work Time.jpg" height="20%" width="30%" />
-    </div>
-    <div class="row">
-        <div class="col-sm-1">
-        </div>
-        <div class="col-sm-4">
-                <p class="body">Work Time</p>
+            <p class="body">Hallway</p>
         </div>
     </div>
     <br />
+
+
+
 
 </body>
 </html>
