CSS and Code the Way fixed up

--- a/CTWUXClassExercise/Properties/codeTheWay.html
+++ b/CTWUXClassExercise/Properties/codeTheWay.html
@@ -7,26 +7,27 @@
 </head>
 
 <body>
+    <img src="/Images/CodeTheWay Logo.png" height="5%" width="10%" />
+    <p align="center" class="majorHeading">Code the Way</p>
 
-    <img src="/Images/CodeTheWay Logo.png" height="5%" width="10%" /><h1 align="center" class="heading1">Code the Way</h1>
-
-    <h3 class="heading2">Mission</h3>
-    <p class="body">Code the Way facilitates the collaboration of schools, companies, and nonprofits to: (1) Offer students advanced computer science training and real-world job experiences working on projects that benefit nonprofits; (2) Increase certified computer science teachers; and (3) Contribute to the technology talent base.</p>
-    <p class="body">Code the Way model includes:</p>
-    <ul>
-        <li class="body">Student access to real-world job experience – In addition to an advanced course that may earn post-secondary credits, students get experience working collaboratively on a project that benefits a nonprofit, culminating in a presentation to business leaders.</li>
-        <li class="body">Companies are part of the solution – Companies invest in education, make technology more accessible to nonprofits, offer their employees a meaningful volunteer experience, and contribute to the talent pipeline.</li>
-        <li class="body">Increasing certified computer science teachers – Support and training for computer science teacher certification increases the availability and quality of high school computer science programs.</li>
-    </ul>
+    <p class="minorHeading">Mission</p>
+    <div class="bodyText">
+        <p>Code the Way facilitates the collaboration of schools, companies, and nonprofits to: (1) Offer students advanced computer science training and real-world job experiences working on projects that benefit nonprofits; (2) Increase certified computer science teachers; and (3) Contribute to the technology talent base.</p>
+        <p>Code the Way model includes:</p>
+        <ul>
+            <li>Student access to real-world job experience – In addition to an advanced course that may earn post-secondary credits, students get experience working collaboratively on a project that benefits a nonprofit, culminating in a presentation to business leaders.</li>
+            <li>Companies are part of the solution – Companies invest in education, make technology more accessible to nonprofits, offer their employees a meaningful volunteer experience, and contribute to the talent pipeline.</li>
+            <li>Increasing certified computer science teachers – Support and training for computer science teacher certification increases the availability and quality of high school computer science programs.</li>
+        </ul>
+    </div>
     <img src="/Images/Team Learning.jpg" height="20%" width="35%" align="right" />
-    <h3 class="heading2">Vision</h3>
-    <p class="body">High school students in Greater Milwaukee have access to high quality computer science education and real-world job experiences, positioning them for success in technology-related fields</p>
+    <p class="minorHeading">Vision</p>
+    <p class="bodyText">High school students in Greater Milwaukee have access to high quality computer science education and real-world job experiences, positioning them for success in technology-related fields</p>
 
-
-    <h3 class="heading2">Links</h3>
-    <a href="lifeNavigators.html" class="button">Life Navigators</a>
-    <a href="heroesForHealthcare.html" class="button">Heroes For Healthcare</a>
-    <a href="media.html" class="button">Media</a>
+    <p class="minorHeading">Links</p>
+    <a class="buttonFormatting" href="lifeNavigators.html">Life Navigators</a>
+    <a class="buttonFormatting" href="heroesForHealthcare.html">Heroes For Healthcare</a>
+    <a class="buttonFormatting" href="media.html">Media</a>
 
 </body>
 
