--- a/CTWUXClassExercise/Properties/codeTheWay.html
+++ b/CTWUXClassExercise/Properties/codeTheWay.html
@@ -11,7 +11,7 @@
     <title>Code the Way</title>
 </head>
 
-<body onload="hide()">
+<body>
     <br />
     <br />
     <div class="row">
@@ -55,26 +55,19 @@
                         </ul>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-sm-4">
-                        <button onclick="showHide()" class="button">Show Vision</button>
-                    </div>
-                </div>
                 <br />
-                <div id="vision">
-                    <div class="row">
-                        <div class="col-sm-2">
-                            <h3 class="heading2">Vision</h3>
-                        </div>
-                        <div class="col-sm-10">
-                            <p class="body">High school students in Greater Milwaukee have access to high quality computer science education and real-world job experiences, positioning them for success in technology-related fields.</p>
-                        </div>
+                <div class="row">
+                    <div class="col-sm-2">
+                        <h3 class="heading2">Vision</h3>
+                    </div>
+                    <div class="col-sm-10">
+                        <p class="body">High school students in Greater Milwaukee have access to high quality computer science education and real-world job experiences, positioning them for success in technology-related fields.</p>
                     </div>
                 </div>
             </div>
-            <img src="/Images/Team Learning.jpg" height="20%" width="35%" align="right" />
+            <img src="/Images/Team Learning.jpg" height="25%" width="40%" align="right" />
         </div>
-    </div>
+        </div>
 
         
     
